/*
 * Copyright 2022 Google LLC.
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto2";

package yggdrasil_decision_forests.serving.proto;

message FeatureStatistics {
  repeated FeatureStatistic features = 1;

  // Total number of examples.
  optional int64 num_examples = 2 [default = 0];

  message FeatureStatistic {
    // Number of non-missing values.
    optional int64 num_non_missing = 1 [default = 0];

    oneof type {
      Numerical numerical = 2;
      Categorical categorical = 3;
    }
  }

  message Numerical {
    optional double sum = 1 [default = 0];
    optional double sum_squared = 2 [default = 0];
    optional float min = 3 [default = 0];
    optional float max = 4 [default = 0];
  }

  message Categorical {
    map<int32, int64> count_per_value = 1;
  }
}